--- a/app/views/file_diff/index.html.erb
+++ b/app/views/file_diff/index.html.erb
@@ -1,32 +1,10 @@
-<%= simple_form_for @new_files, :url => file_diff_find_deffs_path, :method => :post, :html => { :class => 'form-horizontal', :multipart => true } do |f| %>
-	<%= f.error_notification %>				
-	<%= f.input :doc_current, :as => :file, :required => true%>
-	<%= f.input :doc_origin, :as => :file, :required => true%>
-				
-
-	<div class="footer_buttons">
+<div class="center_div">
+	<%= simple_form_for @new_files, :url => file_diff_find_deffs_path, :method => :post, :html => { :class => 'form-horizontal', :multipart => true } do |f| %>
+		<%= f.error_notification %>				
+		<%= f.input :doc_current, :as => :file, :required => true%>
+		<%= f.input :doc_origin, :as => :file, :required => true%>
 		<%= f.submit("Diff", :class => "btn btn-primary")%>
-    </div>
-<% end %>
-
-<div id="diff_div">
-	<%= @output.html_safe %>
+	<% end %>
 </div>
 
 
-
-<style>
-.diff{overflow:auto;}
-.diff ul{background:#fff;overflow:auto;font-size:13px;list-style:none;margin:0;padding:0;display:table;width:100%;}
-.diff del, .diff ins{display:block;text-decoration:none;}
-.diff li{padding:0; display:table-row;margin: 0;height:1em;}
-.diff li.ins{background:#dfd; color:#080}
-.diff li.del{background:#fee; color:#b00}
-.diff li:hover{background:#ffc}
-/* try 'whitespace:pre;' if you don't want lines to wrap */
-.diff del, .diff ins, .diff span{white-space:pre-wrap;font-family:courier;}
-.diff del strong{font-weight:normal;background:#fcc;}
-.diff ins strong{font-weight:normal;background:#9f9;}
-.diff li.diff-comment { display: none; }
-.diff li.diff-block-info { background: none repeat scroll 0 0 gray; }
-</style>
